# Audacity_subtitle_generator--test

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
audacity-plugin/: plugin.xml
include/: PluginInterface.h
src/: ExportLabels.cpp  ExportLabels.h  main.cpp
